--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">ng2-capture</a>
+			<a class="navbar-brand" href="#">ng2-demo</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
@@ -34,6 +34,7 @@
 			<ul class="nav nav-sidebar">
 				<li><a routerLink="/home" routerLinkActive="active">Home</a></li>
 				<li><a routerLink="/demo-form" routerLinkActive="active">Demo Form</a></li>
+				<li><a routerLink="/demo-timenow" routerLinkActive="active">Demo Time Now</a></li>
 			</ul>
 		</div>
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
