Cleanup and future expansion

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+label.required:after {
+    color: #e32;
+    content: ' *';
+    display:inline;
+}
+
 /*loader start*/
 /* Absolute Center Spinner */
 .loading {
