--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,8 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Dashboard</a></li>
-				<li><a href="#">Settings</a></li>
-				<li><a href="#">Profile</a></li>
-				<li><a href="#">Help</a></li>
+				<li><a href="#">WIP Profile</a></li>
+				<li><a href="#">WIP Settings</a></li>
 			</ul>
 			<!-- <form class="navbar-form navbar-right">
 							<input type="text" class="form-control" placeholder="Search...">
@@ -25,16 +23,20 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-3 col-md-2 sidebar">
-			<ul class="nav nav-sidebar">
+			<!-- <ul class="nav nav-sidebar">
 				<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
 				<li><a href="#">Reports</a></li>
 				<li><a href="#">Analytics</a></li>
 				<li><a href="#">Export</a></li>
-			</ul>
+			</ul> -->
 			<ul class="nav nav-sidebar">
 				<li><a routerLink="/home" routerLinkActive="active">Home</a></li>
 				<li><a routerLink="/demo-form" routerLinkActive="active">Demo Form</a></li>
 				<li><a routerLink="/demo-timenow" routerLinkActive="active">Demo Time Now</a></li>
+
+				<li><a routerLink="/demo-timenow" routerLinkActive="active">WIP Chart</a></li>
+				<li><a routerLink="/demo-timenow" routerLinkActive="active">WIP Table</a></li>
+				<li><a routerLink="/demo-timenow" routerLinkActive="active">WIP Autocomplete</a></li>
 			</ul>
 		</div>
 		<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
