--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
 				<li><a routerLink="/home" routerLinkActive="active">Home</a></li>
 				<li><a routerLink="/demo-form" routerLinkActive="active">Demo Form</a></li>
 				<li><a routerLink="/demo-timenow" routerLinkActive="active">Demo Time Now</a></li>
+				<li><a routerLink="/demo-charts" routerLinkActive="active">Demo Chart</a></li>
 
-				<li><a routerLink="/demo-timenow" routerLinkActive="active">WIP Chart</a></li>
 				<li><a routerLink="/demo-timenow" routerLinkActive="active">WIP Table</a></li>
 				<li><a routerLink="/demo-timenow" routerLinkActive="active">WIP Autocomplete</a></li>
 			</ul>
